Change config so website will update

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: twitter.com/raffrica
   stackoverflow: https://stackexchange.com/users/11795004/raffrica
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: # channel/<your_long_string> or user/<user-name> ?
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
