Update config avatar link

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Daniel Raff
 job_title: Med Student. Data Scientist.
 email: daniel18raff@gmail.com
 description: I'm interested in the use of data analytics and visualization to improve the quality and reach of clinical care. Co-Founder of Hatching Health.
-#avatar:
+avatar: https://www.gravatar.com/avatar/5b32c2bf27fb3eabc5bb5cfbfb47aac6
 favicon: /favicon.ico
 twitter_handler: raffrica
 analytics_code: UA-116431800-1
