--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ avatar: https://www.gravatar.com/avatar/5b32c2bf27fb3eabc5bb5cfbfb47aac6?s=2048
 favicon: /favicon.ico
 twitter_handler: raffrica
 analytics_code: UA-116431800-1
-disqus: your_disqus_site
+disqus: https://danielraff-com.disqus.com
 
 # Social Accounts
 social_networks:
