Shorten personal description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Daniel Raff
 job_title: Med Student. Data Scientist.
 email: daniel18raff@gmail.com
-description:  I’m passionate about extending the reach and quality of clinical care through data science tools and technology. I envision myself as a data-literate doctor who can understand clinicians and data scientists alike.  Co-Founder of Hatching Health.
+description:  I’m passionate about extending the reach and quality of clinical care through data science tools and technology. Co-Founder of Hatching Health.
 avatar: https://www.gravatar.com/avatar/5b32c2bf27fb3eabc5bb5cfbfb47aac6?s=2048
 favicon: /favicon.ico
 twitter_handler: raffrica
