--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General Settings
 name: Daniel Raff
-job_title: Family Medicine Resident. Data Scientist.
+job_title: Family Med Doc. Data Scientist.
 email: daniel18raff@gmail.com
 description:  I am passionate about extending the reach and quality of clinical care through data science tools and technology. Co-Founder of Hatching Health.
 avatar: https://www.gravatar.com/avatar/5b32c2bf27fb3eabc5bb5cfbfb47aac6?s=2048
@@ -11,7 +11,7 @@ disqus: danielraff-com
 
 # Social Accounts
 social_networks:
--  { name: facebook, url: 'https://www.facebook.com/daniel.raff' }
+-  { name: facebook, url: '' }
 -  { name: twitter, url: 'https://twitter.com/raffrica' }
 -  { name: instagram, url: '' }
 -  { name: google-plus, url: '' }
