--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General Settings
 name: Daniel Raff
-job_title: Family Med Doc. Data Scientist.
+job_title: Family Doc. Data Scientist.
 email: daniel18raff@gmail.com
 description:  I am passionate about extending the reach and quality of clinical care through data science tools and technology. Co-Founder of Hatching Health.
 avatar: https://www.gravatar.com/avatar/5b32c2bf27fb3eabc5bb5cfbfb47aac6?s=2048
